# propcheck

./: LICENSE  README.md  logic.cabal  propcheck.cabal  stack.yaml
examples/: Examples.hs  a-and-b.pf  associativity-of-and.pf  associativity-of-or.pf  bad-parse.pf  bad-ref.pf  check_info.txt  commutativity-of-and.pf  commutativity-of-or.pf  contrapositive.pf  cycle.pf  cycle2.pf  de-morgan1.pf  ill-formed.pf  impl-or.pf  not-implies-implies.pf  not-not-a.pf  peirce.pf  pqr.pf  problem1_1.pf  problem1_2.pf  problem1_3.pf  problem1_4a.pf  problem1_4b.pf  problem1_5.pf  sample.pf
src/: Main.hs  rule_summaries.txt
src/Logic/: Predicate.hs  Propositional.hs
src/Logic/Predicate/: Parse.hs
src/Logic/Propositional/: Natural.hs  Parse.hs  Parser.hs  Prover.hs  Semantics.hs  Sequent.hs  Syntax.hs  TruthTable.hs
src/Logic/Propositional/Natural/: Parser.hs  ProofLine.hs  Prover.hs
src/Logic/Propositional/Parser/: ProofLine.hs
